fixing footer align

--- a/style.css
+++ b/style.css
@@ -3,8 +3,30 @@ body {
   padding: 0;
 }
 
-.socialmedia ul li {
+.socialmedia__title {
+  text-align: center;
+  font-size: medium;
+}
+
+.socialmedia ul {
   display: flex;
+  list-style-type: none;
+  justify-content: center;
+  padding: 0;
+}
+
+.socialmedia__iconlist li {
+  padding-right: 1rem;
+  padding-left: 1rem;
+}
+
+.socialmedia__iconlist li a i {
+  font-size: x-large;
+  color: rgb(223, 103, 103);
+}
+
+.socialmedia__iconlist a {
+  text-decoration: none;
 }
 
 .formulario__input {
@@ -30,9 +52,25 @@ body {
   justify-content: center;
 }
 
-.formulario__button button {
+.formulario__checkbox label a {
+  color: black;
+}
+
+.formulario__button {
   display: flex;
   justify-content: center;
+  padding-bottom: 2rem;
+}
+
+.formulario__button button {
+  background-color: rgb(223, 103, 103);
+  border-style: none;
+  height: 34px;
+  width: 200px;
+  color: white;
+  text-align: center;
+  padding: 0;
+  margin: 0;
 }
 
 .footerbar {
@@ -54,8 +92,8 @@ body {
 
 .contacto__list a {
   text-align: center;
-  text-decoration: none;
   color: rgb(206, 74, 74);
+  text-decoration: none;
 }
 
 .contacto__list i {
